# osquery

./: CMakeLists.txt
cmake/: install_directives.cmake
libraries/cmake/source/glog/: CMakeLists.txt
libraries/cmake/source/modules/: utils.cmake
osquery/events/: types.h
osquery/logger/: logger.cpp
osquery/tables/system/: CMakeLists.txt
osquery/utils/linux/: CMakeLists.txt
specs/: CMakeLists.txt
tools/deployment/: osqueryctl
tools/deployment/linux_packaging/rpm/: osqueryd.service
